fix: adjust font size for better responsiveness on mobile devices

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -119,12 +119,8 @@
   }
 
   @media (max-width: 767px) {
-    html {
-      font-size: 14px;
-    }
-
-    input, select, textarea {
-      font-size: 16px !important;
+    html, input, select, textarea {
+      font-size: 16px;
     }
   }
 
